--- a/piws/migration/static_pages/index.html
+++ b/piws/migration/static_pages/index.html
@@ -1,9 +1,9 @@
 <!-- Entry -->
-<h2><strong>The NeuroSpinWeb cube contains useful tools to insert and expose data in a database.</strong></h2>
+<h2><strong>The Population Imaging Web Service (PIWS) cube contains useful tools to insert and expose neuroimaging genetic data in a database.</strong></h2>
 <div class="container">
   <!-- Hero unit -->
     <div class="span7 hero-unit">
-        <p>The NeuroSpinWeb cube has been used to generate the Senior database. The proposed semantic web framework enables us to bring together imaging, genetics and questionnaire data.</p>
+        <p>The PIWS cube has been used to generate the Senior database. The proposed semantic web framework enables us to bring together imaging, genetics and questionnaire data.</p>
         <a href="%(demo-url)s" class="btn btn-large btn-success">Access the Demo</a>
     </div>
 	<!-- Image -->
