Consistency in user-visible text

--- a/piws/migration/static_pages/index.html
+++ b/piws/migration/static_pages/index.html
@@ -18,7 +18,7 @@
         <li class="span4">
             <div class="thumbnail index-image">
                 <img src="%(database-image)s" alt="data base"/>
-                <h3>Access the Code</h3>
+                <h3>Access the code</h3>
                 <p>The cube is made available under this <a href="%(license-url)s">license</a>.</p>
             </div>
         </li>
