WIP: rework presentation of PIWS

--- a/piws/migration/static_pages/index.html
+++ b/piws/migration/static_pages/index.html
@@ -1,9 +1,9 @@
 <!-- Entry -->
-<h2><strong>The Population Imaging Web Service (PIWS) cube contains useful tools to insert and expose neuroimaging genetic data in a database.</strong></h2>
+<h2><strong>Population Imaging Web Service (PIWS)</strong></h2>
 <div class="container">
   <!-- Hero unit -->
     <div class="span7 hero-unit">
-        <p>The PIWS cube has been used to generate the Senior database. The proposed semantic web framework enables us to bring together imaging, genetics and questionnaire data.</p>
+        <p>The PIWS <i>cube</i> brings together imaging, genetics and questionnaire data into a database and exposes them using semantic web principles.<p>
         <a href="%(demo-url)s" class="btn btn-large btn-success">Access the Demo</a>
     </div>
 	<!-- Image -->
@@ -18,8 +18,8 @@
         <li class="span4">
             <div class="thumbnail index-image">
                 <img src="%(database-image)s" alt="data base"/>
-                <h3>Access the code</h3>
-                <p>The cube is made available under this <a href="%(license-url)s">license</a>.</p>
+                <h3>Access the Code</h3>
+                <p>The source code is <a="https://github.com/neurospin/piws">made available</a> under LGPL.</p>
             </div>
         </li>
         <!-- Project-->
