--- a/piws/migration/static_pages/piws.html
+++ b/piws/migration/static_pages/piws.html
@@ -2,4 +2,4 @@
 
 <p>The Population Imaging Web Service (PIWS) is built on top of <a href="https://www.cubicweb.org/">Cubicweb</a>. It improves and extends the software previously developped for the <a href="https://hal-cea.archives-ouvertes.fr/cea-01213448">Brainomics/Localizer database</a>.</p>
 
-<p>The source code is made available under LGPL.</p>
+<p>The source code is made available under CeCILL-B.</p>
