Ooops... Typo in user-visible text

--- a/piws/migration/static_pages/index.html
+++ b/piws/migration/static_pages/index.html
@@ -19,7 +19,7 @@
             <div class="thumbnail index-image">
                 <img src="%(database-image)s" alt="data base"/>
                 <h3>Access the Code</h3>
-                <p>The source code is <a="https://github.com/neurospin/piws">made available</a> under CeCILL-B.</p>
+                <p>The <a href="https://github.com/neurospin/piws">source code</a> is made available under CeCILL-B.</p>
             </div>
         </li>
         <!-- Project-->
