--- a/piws/migration/static_pages/legal.html
+++ b/piws/migration/static_pages/legal.html
@@ -6,7 +6,7 @@
     <dt>Hébergeur</dt>
     <dd>CEA</dd>
     <dt>Conception et réalisation</dt>
-    <dd>CEA/DSV/I2BM/NeuroSpin<br/>Logilab</dd>
+    <dd>CEA/DRF/I2BM/NeuroSpin<br/>Logilab</dd>
 </dl>
 </p>
 
