--- a/_modules/index.html
+++ b/_modules/index.html
@@ -20,7 +20,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '1.2.0',
+        VERSION:     '2.0.0',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -75,10 +75,15 @@
 		    <ul class="dropdown-menu">
 	          <li class="link-title">PIWS</li>
 			  <li class="divider"></li>
+			  <li><a href="../rights.html">Rights management</a></li>
 			  <li><a href="../views.html">Views</a></li>
 			  <li><a href="../features.html">Features documentation</a></li>
 			  <li class="divider"></li>
 			  <li><a href="../scripts.html">Importation procedures</a></li>
+			  <li><a href="../parsers.html">Standard parsers</a></li>
+			  <li class="divider"></li>
+			  <li><a href="../download.html">Download</a></li>
+			  <li><a href="../upload.html">Upload</a></li>
 		    </ul>
 		  </div>
         </li>
@@ -94,12 +99,11 @@
 
         <!-- info setup -->
           <p class="doc-version">
-           This documentation is for Population Imaging Web Service Cube <strong>version 1.2.0</strong>
+           This documentation is for Population Imaging Web Service Cube <strong>version 2.0.0</strong>
           </p>
         <p class="citing">
-          If you use the software, please do not esitate to 
-          <a &mdash; <a href="https://github.com/neurospin/piws.git">
-          Report a Bug</a>.
+          If you use the software, please do not hesitate to 
+          <a href="https://github.com/neurospin/piws">report a bug</a>.
         </p>
 
       <!-- toc tree -->
@@ -124,8 +128,14 @@
 <li><a href="cubes/piws/importer/scans.html">cubes.piws.importer.scans</a></li>
 <li><a href="cubes/piws/importer/subjects.html">cubes.piws.importer.subjects</a></li>
 <li><a href="cubes/piws/importer/users.html">cubes.piws.importer.users</a></li>
+<li><a href="cubes/piws/parser/freesurfer.html">cubes.piws.parser.freesurfer</a></li>
+<li><a href="cubes/piws/schema/security.html">cubes.piws.schema.security</a></li>
+<li><a href="cubes/piws/views/binary_json.html">cubes.piws.views.binary_json</a></li>
 <li><a href="cubes/piws/views/facets.html">cubes.piws.views.facets</a></li>
 <li><a href="cubes/piws/views/highcharts_views.html">cubes.piws.views.highcharts_views</a></li>
+<li><a href="cubes/piws/views/longitudinal_views.html">cubes.piws.views.longitudinal_views</a></li>
+<li><a href="cubes/piws/views/primary.html">cubes.piws.views.primary</a></li>
+<li><a href="cubes/piws/views/secondary.html">cubes.piws.views.secondary</a></li>
 <li><a href="cubes/piws/views/table_views.html">cubes.piws.views.table_views</a></li>
 <li><a href="cubicweb/view.html">cubicweb.view</a></li>
 </ul>
