--- a/installation.html
+++ b/installation.html
@@ -20,7 +20,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '1.2.0',
+        VERSION:     '2.0.0',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -30,7 +30,7 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="top" title="PIWS" href="index.html" />
-    <link rel="next" title="Documentation of the ‘piws’ cube" href="documentation.html" />
+    <link rel="next" title="Documentation of the ‘PIWS’ cube" href="documentation.html" />
     <link rel="prev" title="Population Imaging Web Service: PIWS" href="index.html" />
   
    
@@ -77,10 +77,15 @@
 		    <ul class="dropdown-menu">
 	          <li class="link-title">PIWS</li>
 			  <li class="divider"></li>
+			  <li><a href="rights.html">Rights management</a></li>
 			  <li><a href="views.html">Views</a></li>
 			  <li><a href="features.html">Features documentation</a></li>
 			  <li class="divider"></li>
 			  <li><a href="scripts.html">Importation procedures</a></li>
+			  <li><a href="parsers.html">Standard parsers</a></li>
+			  <li class="divider"></li>
+			  <li><a href="download.html">Download</a></li>
+			  <li><a href="upload.html">Upload</a></li>
 		    </ul>
 		  </div>
         </li>
@@ -96,9 +101,8 @@
 
         <!-- info setup -->
         <p class="citing">
-          If you use the software, please do not esitate to 
-          <a &mdash; <a href="https://github.com/neurospin/piws.git">
-          Report a Bug</a>.
+          If you use the software, please do not hesitate to 
+          <a href="https://github.com/neurospin/piws">report a bug</a>.
         </p>
 
       <!-- toc tree -->
