--- a/_modules/cubes/piws/importer/base.html
+++ b/_modules/cubes/piws/importer/base.html
@@ -20,7 +20,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../../../',
-        VERSION:     '1.2.0',
+        VERSION:     '2.0.0',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -76,10 +76,15 @@
 		    <ul class="dropdown-menu">
 	          <li class="link-title">PIWS</li>
 			  <li class="divider"></li>
+			  <li><a href="../../../../rights.html">Rights management</a></li>
 			  <li><a href="../../../../views.html">Views</a></li>
 			  <li><a href="../../../../features.html">Features documentation</a></li>
 			  <li class="divider"></li>
 			  <li><a href="../../../../scripts.html">Importation procedures</a></li>
+			  <li><a href="../../../../parsers.html">Standard parsers</a></li>
+			  <li class="divider"></li>
+			  <li><a href="../../../../download.html">Download</a></li>
+			  <li><a href="../../../../upload.html">Upload</a></li>
 		    </ul>
 		  </div>
         </li>
@@ -95,12 +100,11 @@
 
         <!-- info setup -->
           <p class="doc-version">
-           This documentation is for Population Imaging Web Service Cube <strong>version 1.2.0</strong>
+           This documentation is for Population Imaging Web Service Cube <strong>version 2.0.0</strong>
           </p>
         <p class="citing">
-          If you use the software, please do not esitate to 
-          <a &mdash; <a href="https://github.com/neurospin/piws.git">
-          Report a Bug</a>.
+          If you use the software, please do not hesitate to 
+          <a href="https://github.com/neurospin/piws">report a bug</a>.
         </p>
 
       <!-- toc tree -->
@@ -164,27 +168,33 @@
         <span class="p">(</span><span class="s2">&quot;CWGroup&quot;</span><span class="p">,</span> <span class="s2">&quot;can_update&quot;</span><span class="p">,</span> <span class="s2">&quot;Assessment&quot;</span><span class="p">)</span>
     <span class="p">]</span>
     <span class="n">fileset_relations</span> <span class="o">=</span> <span class="p">[</span>
-        <span class="p">[</span><span class="s2">&quot;ParentEntitiyName&quot;</span><span class="p">,</span> <span class="s2">&quot;results_files&quot;</span><span class="p">,</span> <span class="s2">&quot;FileSet&quot;</span><span class="p">],</span>
+        <span class="p">[</span><span class="s2">&quot;ParentEntitiyName&quot;</span><span class="p">,</span> <span class="s2">&quot;filesets&quot;</span><span class="p">,</span> <span class="s2">&quot;FileSet&quot;</span><span class="p">],</span>
         <span class="p">(</span><span class="s2">&quot;FileSet&quot;</span><span class="p">,</span> <span class="s2">&quot;in_assessment&quot;</span><span class="p">,</span> <span class="s2">&quot;Assessment&quot;</span><span class="p">),</span>
-        <span class="p">(</span><span class="s2">&quot;FileSet&quot;</span><span class="p">,</span> <span class="s2">&quot;file_entries&quot;</span><span class="p">,</span> <span class="s2">&quot;ExternalFile&quot;</span><span class="p">),</span>
+        <span class="p">(</span><span class="s2">&quot;FileSet&quot;</span><span class="p">,</span> <span class="s2">&quot;external_files&quot;</span><span class="p">,</span> <span class="s2">&quot;ExternalFile&quot;</span><span class="p">),</span>
+        <span class="p">(</span><span class="s2">&quot;ExternalFile&quot;</span><span class="p">,</span> <span class="s2">&quot;fileset&quot;</span><span class="p">,</span> <span class="s2">&quot;FileSet&quot;</span><span class="p">),</span>
         <span class="p">(</span><span class="s2">&quot;ExternalFile&quot;</span><span class="p">,</span> <span class="s2">&quot;in_assessment&quot;</span><span class="p">,</span> <span class="s2">&quot;Assessment&quot;</span><span class="p">)</span>
     <span class="p">]</span>
 
-<div class="viewcode-block" id="Base.__init__"><a class="viewcode-back" href="../../../../generated/scripts/cubes.piws.importer.base.Base.html#cubes.piws.importer.base.Base.__init__">[docs]</a>    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">session</span><span class="p">,</span> <span class="n">use_store</span><span class="o">=</span><span class="bp">True</span><span class="p">,</span> <span class="n">piws_security_model</span><span class="o">=</span><span class="bp">True</span><span class="p">):</span>
+<div class="viewcode-block" id="Base.__init__"><a class="viewcode-back" href="../../../../generated/scripts/cubes.piws.importer.base.Base.html#cubes.piws.importer.base.Base.__init__">[docs]</a>    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">session</span><span class="p">,</span> <span class="n">can_read</span><span class="o">=</span><span class="bp">True</span><span class="p">,</span> <span class="n">can_update</span><span class="o">=</span><span class="bp">False</span><span class="p">,</span>
+                 <span class="n">use_store</span><span class="o">=</span><span class="bp">True</span><span class="p">,</span> <span class="n">piws_security_model</span><span class="o">=</span><span class="bp">True</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot; Initialize the SeniorData class.</span>
 
 <span class="sd">        Parameters</span>
 <span class="sd">        ----------</span>
 <span class="sd">        session: Session (mandatory)</span>
 <span class="sd">            a cubicweb session.</span>
-<span class="sd">        list_group_names: list of str (mandatory)</span>
-<span class="sd">            the name of the different groups</span>
+<span class="sd">        can_read: bool (optional, default True)</span>
+<span class="sd">            set the read permission to the imported data.</span>
+<span class="sd">        can_update: bool (optional, default False)</span>
+<span class="sd">            set the update permission to the imported data.</span>
 <span class="sd">        use_store: bool (optional, default True)</span>
 <span class="sd">            if True use an SQLGenObjectStore, otherwise the session.</span>
 <span class="sd">        piws_security_model: bool (optional, default True)</span>
 <span class="sd">            if True apply the PIWS security model.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="c1"># CW parameters</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">can_read</span> <span class="o">=</span> <span class="n">can_read</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">can_update</span> <span class="o">=</span> <span class="n">can_update</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">use_store</span> <span class="o">=</span> <span class="n">use_store</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">session</span> <span class="o">=</span> <span class="n">session</span>
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">use_store</span><span class="p">:</span>
@@ -205,7 +215,9 @@
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="c1"># Send the new entities to the db</span>
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">use_store</span><span class="p">:</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">store</span><span class="o">.</span><span class="n">flush</span><span class="p">()</span></div>
+            <span class="bp">self</span><span class="o">.</span><span class="n">store</span><span class="o">.</span><span class="n">flush</span><span class="p">()</span>
+        <span class="k">else</span><span class="p">:</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">session</span><span class="o">.</span><span class="n">commit</span><span class="p">()</span></div>
 
 <div class="viewcode-block" id="Base.import_data"><a class="viewcode-back" href="../../../../generated/scripts/cubes.piws.importer.base.Base.html#cubes.piws.importer.base.Base.import_data">[docs]</a>    <span class="k">def</span> <span class="nf">import_data</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot; Method that import the data in cw.</span>
@@ -274,10 +286,10 @@
 <span class="sd">            the input hashed string.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">m</span> <span class="o">=</span> <span class="n">hashlib</span><span class="o">.</span><span class="n">md5</span><span class="p">()</span>
-        <span class="n">m</span><span class="o">.</span><span class="n">update</span><span class="p">(</span><span class="n">path</span><span class="p">)</span>
+        <span class="n">m</span><span class="o">.</span><span class="n">update</span><span class="p">(</span><span class="n">path</span><span class="o">.</span><span class="n">encode</span><span class="p">(</span><span class="s2">&quot;utf-8&quot;</span><span class="p">))</span>
         <span class="k">return</span> <span class="n">m</span><span class="o">.</span><span class="n">hexdigest</span><span class="p">()</span></div>
 
-<div class="viewcode-block" id="Base._progress_bar"><a class="viewcode-back" href="../../../../generated/scripts/cubes.piws.importer.base.Base.html#cubes.piws.importer.base.Base._progress_bar">[docs]</a>    <span class="k">def</span> <span class="nf">_progress_bar</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">ratio</span><span class="p">,</span> <span class="n">title</span><span class="o">=</span><span class="s2">&quot;&quot;</span><span class="p">,</span> <span class="n">bar_length</span><span class="o">=</span><span class="mi">40</span><span class="p">):</span>
+<div class="viewcode-block" id="Base._progress_bar"><a class="viewcode-back" href="../../../../generated/scripts/cubes.piws.importer.base.Base.html#cubes.piws.importer.base.Base._progress_bar">[docs]</a>    <span class="k">def</span> <span class="nf">_progress_bar</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">ratio</span><span class="p">,</span> <span class="n">title</span><span class="o">=</span><span class="s2">&quot;&quot;</span><span class="p">,</span> <span class="n">bar_length</span><span class="o">=</span><span class="mi">40</span><span class="p">,</span> <span class="n">maxsize</span><span class="o">=</span><span class="mi">20</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot; Method to generate a progress bar.</span>
 
 <span class="sd">        Parameters</span>
@@ -288,10 +300,13 @@
 <span class="sd">            a title to identify the progress bar.</span>
 <span class="sd">        bar_length: int (optional)</span>
 <span class="sd">            the length of the bar that will be ploted.</span>
+<span class="sd">        maxsize: int (optional)</span>
+<span class="sd">            use to justify title.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">progress</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="n">ratio</span> <span class="o">*</span> <span class="mf">100.</span><span class="p">)</span>
         <span class="n">block</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="nb">round</span><span class="p">(</span><span class="n">bar_length</span> <span class="o">*</span> <span class="n">ratio</span><span class="p">))</span>
-        <span class="n">text</span> <span class="o">=</span> <span class="s2">&quot;</span><span class="se">\r</span><span class="s2">{2} in Progress: [{0}] {1}%&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span>
+        <span class="n">title</span> <span class="o">=</span> <span class="n">title</span><span class="o">.</span><span class="n">ljust</span><span class="p">(</span><span class="n">maxsize</span><span class="p">,</span> <span class="s2">&quot; &quot;</span><span class="p">)</span>
+        <span class="n">text</span> <span class="o">=</span> <span class="s2">&quot;</span><span class="se">\r</span><span class="s2">[{0}] {1}% {2}&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span>
             <span class="s2">&quot;=&quot;</span> <span class="o">*</span> <span class="n">block</span> <span class="o">+</span> <span class="s2">&quot; &quot;</span> <span class="o">*</span> <span class="p">(</span><span class="n">bar_length</span> <span class="o">-</span> <span class="n">block</span><span class="p">),</span> <span class="n">progress</span><span class="p">,</span> <span class="n">title</span><span class="p">)</span>
         <span class="n">sys</span><span class="o">.</span><span class="n">stdout</span><span class="o">.</span><span class="n">write</span><span class="p">(</span><span class="n">text</span><span class="p">)</span>
         <span class="n">sys</span><span class="o">.</span><span class="n">stdout</span><span class="o">.</span><span class="n">flush</span><span class="p">()</span></div>
@@ -437,7 +452,7 @@
                     <span class="n">check_unicity</span><span class="o">=</span><span class="bp">False</span><span class="p">)</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">_set_unique_relation</span><span class="p">(</span>
                     <span class="n">assessment_eid</span><span class="p">,</span> <span class="s2">&quot;subjects&quot;</span><span class="p">,</span> <span class="n">subject_eid</span><span class="p">,</span>
-                    <span class="n">check_unicity</span><span class="o">=</span><span class="bp">False</span><span class="p">,</span> <span class="n">subjtype</span><span class="o">=</span><span class="s2">&quot;Assessment&quot;</span><span class="p">)</span>
+                    <span class="n">check_unicity</span><span class="o">=</span><span class="bp">False</span><span class="p">)</span>
             <span class="c1"># &gt; add relation with the center</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">_set_unique_relation</span><span class="p">(</span>
                 <span class="n">center_eid</span><span class="p">,</span> <span class="s2">&quot;assessments&quot;</span><span class="p">,</span> <span class="n">assessment_eid</span><span class="p">,</span> <span class="n">check_unicity</span><span class="o">=</span><span class="bp">False</span><span class="p">)</span>
@@ -469,7 +484,7 @@
                         <span class="bp">self</span><span class="o">.</span><span class="n">_set_unique_relation</span><span class="p">(</span>
                             <span class="n">group_eid</span><span class="p">,</span> <span class="s2">&quot;can_update&quot;</span><span class="p">,</span> <span class="n">assessment_eid</span><span class="p">)</span>
             <span class="k">else</span><span class="p">:</span>
-                <span class="k">for</span> <span class="n">group_name</span> <span class="ow">in</span> <span class="p">(</span><span class="s1">&#39;users&#39;</span><span class="p">,</span> <span class="s1">&#39;guests&#39;</span><span class="p">):</span>
+                <span class="k">for</span> <span class="n">group_name</span> <span class="ow">in</span> <span class="p">(</span><span class="s2">&quot;users&quot;</span><span class="p">,</span> <span class="s2">&quot;guests&quot;</span><span class="p">):</span>
                     <span class="n">group_eid</span> <span class="o">=</span> <span class="n">groups</span><span class="p">[</span><span class="n">group_name</span><span class="p">]</span>
 
                     <span class="c1"># &gt; add relation with group</span>
@@ -494,8 +509,9 @@
             <span class="o">**</span><span class="n">fset_struct</span><span class="p">)</span>
         <span class="c1"># &gt; add relation with the parent</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_set_unique_relation</span><span class="p">(</span><span class="n">parent_eid</span><span class="p">,</span>
-            <span class="s2">&quot;results_files&quot;</span><span class="p">,</span> <span class="n">fset_entity</span><span class="o">.</span><span class="n">eid</span><span class="p">,</span>
-            <span class="n">check_unicity</span><span class="o">=</span><span class="bp">False</span><span class="p">)</span>
+            <span class="s2">&quot;filesets&quot;</span><span class="p">,</span> <span class="n">fset_entity</span><span class="o">.</span><span class="n">eid</span><span class="p">,</span> <span class="n">check_unicity</span><span class="o">=</span><span class="bp">False</span><span class="p">)</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_set_unique_relation</span><span class="p">(</span><span class="n">fset_entity</span><span class="o">.</span><span class="n">eid</span><span class="p">,</span>
+            <span class="s2">&quot;containers&quot;</span><span class="p">,</span> <span class="n">parent_eid</span><span class="p">,</span> <span class="n">check_unicity</span><span class="o">=</span><span class="bp">False</span><span class="p">)</span>
         <span class="c1"># &gt; add relation with the assessment</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_set_unique_relation</span><span class="p">(</span><span class="n">fset_entity</span><span class="o">.</span><span class="n">eid</span><span class="p">,</span>
             <span class="s2">&quot;in_assessment&quot;</span><span class="p">,</span> <span class="n">assessment_eid</span><span class="p">,</span>
@@ -510,7 +526,10 @@
                 <span class="o">**</span><span class="n">extfile_struct</span><span class="p">)</span>
             <span class="c1"># &gt; add relation with the file set</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">_set_unique_relation</span><span class="p">(</span><span class="n">fset_entity</span><span class="o">.</span><span class="n">eid</span><span class="p">,</span>
-                <span class="s2">&quot;file_entries&quot;</span><span class="p">,</span> <span class="n">file_entity</span><span class="o">.</span><span class="n">eid</span><span class="p">,</span>
+                <span class="s2">&quot;external_files&quot;</span><span class="p">,</span> <span class="n">file_entity</span><span class="o">.</span><span class="n">eid</span><span class="p">,</span>
+                <span class="n">check_unicity</span><span class="o">=</span><span class="bp">False</span><span class="p">)</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">_set_unique_relation</span><span class="p">(</span><span class="n">file_entity</span><span class="o">.</span><span class="n">eid</span><span class="p">,</span>
+                <span class="s2">&quot;fileset&quot;</span><span class="p">,</span> <span class="n">fset_entity</span><span class="o">.</span><span class="n">eid</span><span class="p">,</span>
                 <span class="n">check_unicity</span><span class="o">=</span><span class="bp">False</span><span class="p">)</span>
             <span class="c1"># &gt; add relation with the assessment</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">_set_unique_relation</span><span class="p">(</span><span class="n">file_entity</span><span class="o">.</span><span class="n">eid</span><span class="p">,</span>
