--- a/_modules/cubes/piws/importer/subjects.html
+++ b/_modules/cubes/piws/importer/subjects.html
@@ -20,7 +20,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../../../',
-        VERSION:     '1.2.0',
+        VERSION:     '2.0.0',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -76,10 +76,15 @@
 		    <ul class="dropdown-menu">
 	          <li class="link-title">PIWS</li>
 			  <li class="divider"></li>
+			  <li><a href="../../../../rights.html">Rights management</a></li>
 			  <li><a href="../../../../views.html">Views</a></li>
 			  <li><a href="../../../../features.html">Features documentation</a></li>
 			  <li class="divider"></li>
 			  <li><a href="../../../../scripts.html">Importation procedures</a></li>
+			  <li><a href="../../../../parsers.html">Standard parsers</a></li>
+			  <li class="divider"></li>
+			  <li><a href="../../../../download.html">Download</a></li>
+			  <li><a href="../../../../upload.html">Upload</a></li>
 		    </ul>
 		  </div>
         </li>
@@ -95,12 +100,11 @@
 
         <!-- info setup -->
           <p class="doc-version">
-           This documentation is for Population Imaging Web Service Cube <strong>version 1.2.0</strong>
+           This documentation is for Population Imaging Web Service Cube <strong>version 2.0.0</strong>
           </p>
         <p class="citing">
-          If you use the software, please do not esitate to 
-          <a &mdash; <a href="https://github.com/neurospin/piws.git">
-          Report a Bug</a>.
+          If you use the software, please do not hesitate to 
+          <a href="https://github.com/neurospin/piws">report a bug</a>.
         </p>
 
       <!-- toc tree -->
@@ -183,7 +187,7 @@
 <span class="sd">            }</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="c1"># Inheritance</span>
-        <span class="nb">super</span><span class="p">(</span><span class="n">Subjects</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="n">__init__</span><span class="p">(</span><span class="n">session</span><span class="p">,</span> <span class="n">use_store</span><span class="p">)</span>
+        <span class="nb">super</span><span class="p">(</span><span class="n">Subjects</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="n">__init__</span><span class="p">(</span><span class="n">session</span><span class="p">,</span> <span class="bp">True</span><span class="p">,</span> <span class="bp">True</span><span class="p">,</span> <span class="n">use_store</span><span class="p">,</span> <span class="bp">False</span><span class="p">)</span>
 
         <span class="c1"># Class parameters</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">subjects</span> <span class="o">=</span> <span class="n">subjects</span>
@@ -225,7 +229,8 @@
             <span class="n">entity_name</span><span class="o">=</span><span class="s2">&quot;Study&quot;</span><span class="p">,</span>
             <span class="n">check_unicity</span><span class="o">=</span><span class="bp">True</span><span class="p">,</span>
             <span class="n">name</span><span class="o">=</span><span class="nb">unicode</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">project_name</span><span class="p">),</span>
-            <span class="n">data_filepath</span><span class="o">=</span><span class="nb">unicode</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">data_filepath</span><span class="p">))</span>
+            <span class="n">data_filepath</span><span class="o">=</span><span class="nb">unicode</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">data_filepath</span><span class="p">)</span>
+        <span class="p">)</span>
         <span class="n">study_eid</span> <span class="o">=</span> <span class="n">study_entity</span><span class="o">.</span><span class="n">eid</span>
 
         <span class="c1">#######################################################################</span>
@@ -234,19 +239,20 @@
 
         <span class="c1"># Go through the subject names</span>
         <span class="n">nb_of_subjects</span> <span class="o">=</span> <span class="nb">float</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">subjects</span><span class="p">))</span>
+        <span class="n">maxsize</span> <span class="o">=</span> <span class="nb">max</span><span class="p">([</span><span class="nb">len</span><span class="p">(</span><span class="n">name</span><span class="p">)</span> <span class="k">for</span> <span class="n">name</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">subjects</span><span class="p">])</span>
         <span class="n">cnt_subject</span> <span class="o">=</span> <span class="mi">1</span>
         <span class="k">for</span> <span class="n">subject_name</span><span class="p">,</span> <span class="n">subject_parameter</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">subjects</span><span class="o">.</span><span class="n">iteritems</span><span class="p">():</span>
 
             <span class="c1"># Print a progress bar</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">_progress_bar</span><span class="p">(</span><span class="n">cnt_subject</span> <span class="o">/</span> <span class="n">nb_of_subjects</span><span class="p">,</span>
-                               <span class="n">title</span><span class="o">=</span><span class="s2">&quot;Import {0}:&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">subject_name</span><span class="p">),</span>
-                               <span class="n">bar_length</span><span class="o">=</span><span class="mi">40</span><span class="p">)</span>
+                               <span class="n">title</span><span class="o">=</span><span class="s2">&quot;{0}(subjects)&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">subject_name</span><span class="p">),</span>
+                               <span class="n">bar_length</span><span class="o">=</span><span class="mi">40</span><span class="p">,</span> <span class="n">maxsize</span><span class="o">=</span><span class="n">maxsize</span> <span class="o">+</span> <span class="mi">9</span><span class="p">)</span>
             <span class="n">cnt_subject</span> <span class="o">+=</span> <span class="mf">1.</span>
 
             <span class="c1"># Create the subject if necessary</span>
             <span class="n">subject_entity</span><span class="p">,</span> <span class="n">is_created</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_get_or_create_unique_entity</span><span class="p">(</span>
-                <span class="n">rql</span><span class="o">=</span><span class="p">(</span><span class="s2">&quot;Any X Where X is Subject, X identifier &quot;</span>
-                     <span class="s2">&quot;&#39;{0}&#39;&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">subject_parameter</span><span class="p">[</span><span class="s2">&quot;identifier&quot;</span><span class="p">])),</span>
+                <span class="n">rql</span><span class="o">=</span><span class="p">(</span><span class="s2">&quot;Any X Where X is Subject, X code_in_study &quot;</span>
+                     <span class="s2">&quot;&#39;{0}&#39;&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">subject_parameter</span><span class="p">[</span><span class="s2">&quot;code_in_study&quot;</span><span class="p">])),</span>
                 <span class="n">check_unicity</span><span class="o">=</span><span class="bp">True</span><span class="p">,</span>
                 <span class="n">entity_name</span><span class="o">=</span><span class="s2">&quot;Subject&quot;</span><span class="p">,</span>
                 <span class="o">**</span><span class="n">subject_parameter</span><span class="p">)</span>
@@ -258,7 +264,9 @@
                     <span class="n">subject_entity</span><span class="o">.</span><span class="n">eid</span><span class="p">,</span> <span class="s2">&quot;study&quot;</span><span class="p">,</span> <span class="n">study_eid</span><span class="p">,</span> <span class="n">check_unicity</span><span class="o">=</span><span class="bp">False</span><span class="p">)</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">_set_unique_relation</span><span class="p">(</span>
                     <span class="n">study_eid</span><span class="p">,</span> <span class="s2">&quot;subjects&quot;</span><span class="p">,</span> <span class="n">subject_entity</span><span class="o">.</span><span class="n">eid</span><span class="p">,</span>
-                    <span class="n">check_unicity</span><span class="o">=</span><span class="bp">False</span><span class="p">)</span></div></div>
+                    <span class="n">check_unicity</span><span class="o">=</span><span class="bp">False</span><span class="p">)</span>
+
+        <span class="k">print</span>  <span class="c1"># new line after last progress bar update</span></div></div>
 </pre></div>
 
           </div>
