--- a/_modules/cubes/piws/importer/users.html
+++ b/_modules/cubes/piws/importer/users.html
@@ -20,7 +20,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../../../',
-        VERSION:     '1.2.0',
+        VERSION:     '2.0.0',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -76,10 +76,15 @@
 		    <ul class="dropdown-menu">
 	          <li class="link-title">PIWS</li>
 			  <li class="divider"></li>
+			  <li><a href="../../../../rights.html">Rights management</a></li>
 			  <li><a href="../../../../views.html">Views</a></li>
 			  <li><a href="../../../../features.html">Features documentation</a></li>
 			  <li class="divider"></li>
 			  <li><a href="../../../../scripts.html">Importation procedures</a></li>
+			  <li><a href="../../../../parsers.html">Standard parsers</a></li>
+			  <li class="divider"></li>
+			  <li><a href="../../../../download.html">Download</a></li>
+			  <li><a href="../../../../upload.html">Upload</a></li>
 		    </ul>
 		  </div>
         </li>
@@ -95,12 +100,11 @@
 
         <!-- info setup -->
           <p class="doc-version">
-           This documentation is for Population Imaging Web Service Cube <strong>version 1.2.0</strong>
+           This documentation is for Population Imaging Web Service Cube <strong>version 2.0.0</strong>
           </p>
         <p class="citing">
-          If you use the software, please do not esitate to 
-          <a &mdash; <a href="https://github.com/neurospin/piws.git">
-          Report a Bug</a>.
+          If you use the software, please do not hesitate to 
+          <a href="https://github.com/neurospin/piws">report a bug</a>.
         </p>
 
       <!-- toc tree -->
@@ -184,7 +188,7 @@
 <span class="sd">            }</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="c1"># Inheritance</span>
-        <span class="nb">super</span><span class="p">(</span><span class="n">CWUsers</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="n">__init__</span><span class="p">(</span><span class="n">session</span><span class="p">,</span> <span class="bp">False</span><span class="p">)</span>
+        <span class="nb">super</span><span class="p">(</span><span class="n">CWUsers</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="n">__init__</span><span class="p">(</span><span class="n">session</span><span class="p">,</span> <span class="bp">True</span><span class="p">,</span> <span class="bp">True</span><span class="p">,</span> <span class="bp">False</span><span class="p">,</span> <span class="bp">False</span><span class="p">)</span>
 
         <span class="c1"># Class parameters</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">users</span> <span class="o">=</span> <span class="n">users</span></div>
@@ -225,14 +229,15 @@
 
         <span class="c1"># Go through the goup names</span>
         <span class="n">nb_of_users</span> <span class="o">=</span> <span class="nb">float</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">users</span><span class="p">))</span>
+        <span class="n">maxsize</span> <span class="o">=</span> <span class="nb">max</span><span class="p">([</span><span class="nb">len</span><span class="p">(</span><span class="n">name</span><span class="p">)</span> <span class="k">for</span> <span class="n">name</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">users</span><span class="p">])</span>
         <span class="n">cnt_user</span> <span class="o">=</span> <span class="mf">1.</span>
         <span class="k">for</span> <span class="n">user_name</span><span class="p">,</span> <span class="n">user_item</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">users</span><span class="o">.</span><span class="n">iteritems</span><span class="p">():</span>
 
             <span class="c1"># Print a progress bar</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">_progress_bar</span><span class="p">(</span>
                 <span class="n">cnt_user</span> <span class="o">/</span> <span class="n">nb_of_users</span><span class="p">,</span>
-                <span class="n">title</span><span class="o">=</span><span class="s2">&quot;Import {0}:&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">user_name</span><span class="p">),</span>
-                <span class="n">bar_length</span><span class="o">=</span><span class="mi">40</span><span class="p">)</span>
+                <span class="n">title</span><span class="o">=</span><span class="s2">&quot;{0}(users)&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">user_name</span><span class="p">),</span>
+                <span class="n">bar_length</span><span class="o">=</span><span class="mi">40</span><span class="p">,</span> <span class="n">maxsize</span><span class="o">=</span><span class="n">maxsize</span> <span class="o">+</span> <span class="mi">7</span><span class="p">)</span>
             <span class="n">cnt_user</span> <span class="o">+=</span> <span class="mf">1.</span>
 
             <span class="c1"># Create the user</span>
@@ -270,7 +275,9 @@
                 <span class="n">group_eid</span> <span class="o">=</span> <span class="n">rset</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="mi">0</span><span class="p">]</span>
                 <span class="c1"># &gt; add relation with the user</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">_set_unique_relation</span><span class="p">(</span><span class="n">user_entity</span><span class="o">.</span><span class="n">eid</span><span class="p">,</span>
-                        <span class="s2">&quot;in_group&quot;</span><span class="p">,</span> <span class="n">group_eid</span><span class="p">,</span> <span class="n">check_unicity</span><span class="o">=</span><span class="bp">True</span><span class="p">)</span></div></div>
+                        <span class="s2">&quot;in_group&quot;</span><span class="p">,</span> <span class="n">group_eid</span><span class="p">,</span> <span class="n">check_unicity</span><span class="o">=</span><span class="bp">True</span><span class="p">)</span>
+
+        <span class="k">print</span>  <span class="c1"># new line after last progress bar update</span></div></div>
 </pre></div>
 
           </div>
