--- a/search.html
+++ b/search.html
@@ -20,7 +20,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '1.2.0',
+        VERSION:     '2.0.0',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -83,10 +83,15 @@
 		    <ul class="dropdown-menu">
 	          <li class="link-title">PIWS</li>
 			  <li class="divider"></li>
+			  <li><a href="rights.html">Rights management</a></li>
 			  <li><a href="views.html">Views</a></li>
 			  <li><a href="features.html">Features documentation</a></li>
 			  <li class="divider"></li>
 			  <li><a href="scripts.html">Importation procedures</a></li>
+			  <li><a href="parsers.html">Standard parsers</a></li>
+			  <li class="divider"></li>
+			  <li><a href="download.html">Download</a></li>
+			  <li><a href="upload.html">Upload</a></li>
 		    </ul>
 		  </div>
         </li>
@@ -102,12 +107,11 @@
 
         <!-- info setup -->
           <p class="doc-version">
-           This documentation is for Population Imaging Web Service Cube <strong>version 1.2.0</strong>
+           This documentation is for Population Imaging Web Service Cube <strong>version 2.0.0</strong>
           </p>
         <p class="citing">
-          If you use the software, please do not esitate to 
-          <a &mdash; <a href="https://github.com/neurospin/piws.git">
-          Report a Bug</a>.
+          If you use the software, please do not hesitate to 
+          <a href="https://github.com/neurospin/piws">report a bug</a>.
         </p>
 
       <!-- toc tree -->
